--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.9.1",
+    "ldrs": "^1.1.7",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
